Fixed Navbar - Fixed Issues in spacing - Fixed Issues in overlays

--- a/index.css
+++ b/index.css
@@ -2,8 +2,36 @@
   font-family: font-light;
   font-size: 16px;
 }
-
+body{position: relative;}
+/* goto top button */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 30px;
+  border: none;
+  outline: none;
+  background-color: #f24181;
+  color: white;
+  cursor: pointer;
+  width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 99999px;
+}
 /* Section 1 Styling */
+.fixed-top{
+  background: rgb(21, 39, 92);
+  background: linear-gradient(
+    97deg,
+    rgba(21, 39, 92, 1) 30%,
+    rgba(23, 23, 57, 1) 62%
+  );
+}
 .section1-button1 {
   border-radius: 30px !important;
   width: 150px !important;
@@ -61,7 +89,7 @@
   background-color: white;
   border-radius: 6px;
   width: 310px;
-  padding: 20px 0;
+  padding: 20px 0px;
   display: flex;
   column-gap: 20px;
   align-items: center;
@@ -213,16 +241,27 @@ h1 {
   src: url(Josefin_Sans/JosefinSans-Regular.ttf);
 }
 
-@media screen and (max-width: 1000px) {
-  .notification-banner {
-    top: 70%;
-    left: 0;
-    max-height: max-content;
-    width: 100%;
+/* Media Queries */
+
+@media screen and (max-width:800px) and (min-width:600px){
+  .notification-banner{
+    bottom: 30%;
+    left: 5%;
+    width: 90%;
+    top: unset;
   }
 }
 
-/* Media Queries */
+@media screen and (max-width:599px){
+  .notification-banner{
+    bottom: 20px;
+    left: 5%;
+    width: 90%;
+    top: unset;
+  }
+}
+
+
 @media screen and (min-width: 768px) {
   .section3-box-intro > p {
     padding-left: 30px;
@@ -238,5 +277,19 @@ h1 {
   }
   .section7 {
     min-height: 45vh;
+  }
+}
+@media screen and (min-width: 750px){
+  .section1-gradient{
+    min-height: 50vh;
+  }
+}
+
+@media screen and (min-width: 2200px) {
+  .container{
+    min-width: 1800px !important;
+  }
+  .section3-col2{
+    padding-left: -300px !important;
   }
 }
